classDiagram
    class Itinerario {
        -String nombreItinerario
        -String descripcionItinerario
        -Puerto listaPuertos
        -CategoriaItinerario categoriaItinerario

        +new()
        +conocerCategoriaItinerario()
    }

    class Recorrido {
        -int numeroEscala
        -Itinerario itinerarioRealizado
        -Navio navioDelViaje
        -datetime fechaViaje
        -float duracionViaje

        +new()
        +conocerNavio()
        +conocerCambioPuerto()
    }

    class Navio {
        -int codigoNavio
        -String nombreNavio
        -float altura
        -float eslora
        -float manga
        -float desplazamiento
        -float autonomiaViaje
        -int cantidadCamarotes
        -int maxCantidadPasajeros
        -int cantidadMotores
        -int cantidadTripulantes
        

        +new()
        +conocerHistorialTripulantes()
        +conocerTripulantes()
        +conocerEstadoNavio()
        +conocerCategoriaNavio()
        +conocerCubierta()
    }

    class Cubierta {
        -int numeroCubierta
        -String ubicacionCubierta
        -Tripulante encargado
        -String descripcionCubierta
        -Navio navioUbicado
    
        +new()
        +conocerCamarote()
    }

    class Camarote {
        -TipoCamarote tipoCamarote
        -String ubicacionCamarote
        -int numeroCamarote
        -EstadoCamarote estadoCamarote
        -Cubierta cubiertaUbicada
        -Navio navioUbicado
    
        +new()
        +conocerTipoCamarote()
        +conocerEstadoCamarote()
    }

    class Tripulante {
        -String nombreTripulante
        -String legajo
        -Navio navioAsignado
        -Puesto puestoTripulante
        -Tripulante jefe
    
        +new()
        +conocerPuesto()
        +conocerHistorialTripulante()
    }

    class HistorialTripulante {
        -Tripulante tripulanteCambiado
        -Puesto nuevoPuestoTripulante
        -String nuevoNombreJefe
        -Navio nuevoNavioAsignado
        -datetime fechaCambio
    
        +new()
        +conocerPuesto()
    }

    class Puesto {
        -String nombrePuesto
        -String descripcionPuesto
    
        +new()
    }

    class Puerto {
        -String nombrePuerto
        -String descripcionPuerto
    
        +new()
    }

    class Pasajero {
        -String tipoDocumento
        -int numeroDocumento
        -String nombre
        -Pais paisOrigen
        -Ciudad ciudadOrigen
        -Camarote camaroteAlojado
    
        +new()
        +conocerPais()
        +conocerCiudad()
        +isViajando()
    }

    class EstadoNavio {
        -String nombreEstadoNavio
        -String descripcionEstadoNavio
    
        +new()
    }

    class EstadoCamarote {
        -String nombreEstadoCamarote
        -String descripcionEstadoCamarote
    
        +new()
    }

    class ReservaCamarote {
        -datetime fechaReseva
        -Camarote camarotereservado
        -Pasajero listaPasajeros
        -Recorrido recorridoreservado
    
        +new()
    }

    class TipoCamarote {
        -String nombreTipoCamarote
        -String descripcionTipoCamarote
    
        +new()
    }

    class CambioEstadoNavio {
        -String nombreEstadoNavio
        -datetime fechaCambioEstado

        +new()
        +conocerEstadoNavio()
    }

    class CategoriaNavio {
        -String nombreCategoria
        -String descripcionCategoria
    
        +new()
    }

    class CategoriaItinerario {
        -String nombreCategoria
        -String descripcionCategoria
    
        +new()
    }

    class Pais {
        -String nombrePais
        -String descripcionPais
        -String moneda
        -String idioma

        +new()
        +conocerCiudad()

        +setNombrePais()
        +getNombrePais()
        +setDescripcionPais()
        +getDescripcionPais()
        +setMoneda()
        +getMoneda()
        +setIdioma()
        +getIdioma()
    }

    class Ciudad {
        -String nombreCiudad
        -String descripcionCiudad
        -Pais pais

        +new()
    }

    class CambioPuerto {
        -Puerto puertoActual
        -Puerto puertoAnterior
        -Puerto puertoFuturo
        -datetime fechaHoraLlegada

        +new()
        +conocerPuerto()
    }

    Itinerario --> "1..*" ReservaCamarote
    Itinerario "1" <-- Recorrido
    Itinerario --> "1..*" Puerto
    Recorrido --> "1" Navio
    Puesto "1..*" <-- HistorialTripulante
    TipoCamarote "1" <-- Camarote
    Camarote --> "1" EstadoCamarote
    Navio --> "1..*" Cubierta
    Cubierta --> "1..*" Camarote
    Itinerario --> "1" CategoriaItinerario
    Pasajero --> "1" Pais
    Puerto --> "1" Pais
    Pasajero --> "1" ReservaCamarote
    ReservaCamarote --> "1" Camarote
    Pais --> "1..*" Ciudad
    Navio --> "1..*" CambioEstadoNavio
    CambioEstadoNavio --> "1" EstadoNavio
    Recorrido --> "1..*" CambioPuerto
    CambioPuerto --> "1..*" Puerto
    Navio --> "1" CategoriaNavio
    Tripulante --> "1..*" HistorialTripulante
    Tripulante --> "1" Tripulante
    HistorialTripulante "1..*" <-- Navio